Zaczęłam ale to taki bullshit narazie

--- a/Sprawozdanie.ipynb
+++ b/Sprawozdanie.ipynb
@@ -1,16 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "cell_type": "markdown",
    "source": [
-    ""
-   ]
+    "Przedmiot: Podstawy Reprezenracji i Analizy Danych\n",
+    "Autorzy: Oliwia Gruda, Tomasz Wolszczak\n",
+    "Data: 31.01.2026\n",
+    "Zbiór danych: Spam Emails\n",
+    "Zadania do wykonania: ?\n",
+    "\n",
+    "Celem niniejszego projektu była implementacja i ocena odelu uczenia maszynowego służącego do klasyfikacji wiadomości e-mail. Głównym problemem była skuteczna separacja wiadomości niechcianych (spam) od wiadomości wartościowych (real)"
+   ],
+   "id": "9661b73ea5ef3ea3"
   }
  ],
  "metadata": {
